@@ -10,6 +10,7 @@
 .: WSM: Task: Navigation is closed when click on add new category input (WSM-132)
 .: WSM: Task: Add publish button in setting (WSM-118)
 .: WSM: Task: Prevent empty page when page number more than 1 (WSM-111)
+.: WSM: Task: Selected items mobile UI issue (WSM-110)
 
 ---------------------------------------------
 - 2020-06-13                                -
